flock the pidfile and stop writing the parent pid to it so we're more robst.
Enable DHCP_INFORM support via the -S option (requires -s ipaddr too)
Use the DUID stored to create an RFC 4361 conformant client identifier
if none is specified instead of just using the MAC address.
Create a DUID-LLT according to RFC 3315 and store it in peristent file.
config.h now has the compile time options, instead of being dotted around.
Added -E option, which reads the last info file and uses the information there
if we timeout and the lease is still valid, thanks to Roberto Angelino.
Compiles ok on NetBSD, but doesn't add routes yet - thanks to Gabor Z. Papp.
If the current hostname contains dots then send it as a FQDN.
Ensure that static routes are always added before routers.
Use getnameinfo instead of gethostbyaddr.
Remove gateways from the ROUTES and add to GATEWAYS
define #INFO_COMPAT if you wish your .info file to add support for some
old 1.x and 2.x structure.

dhcpcd-3.0.17
Minimum message size is now 300 bytes for crappy DHCP servers who think
they have to obey the BOOTP minimum message size :/
Compile ok on OpenBSD (thanks to icezimm and reb in #gentoo-bsd for testing)
We check gcc supports -Wextra and friends before using them.
We now restore the starting MTU value when we exit OR we don't receive a
a valid MTU value from the dhcp server.
--nomtu / -M now stops the MTU from being used.
You can now build dhcpcd without support for writing ntp, nis and info files
which makes the binary a few k smaller.
Support OpenNTP as well as NTP.
Re-work the state engine a little, so we renew and rebind correctly.
Subsequent debug options stop dhcpcd from daemonising.
When we get an invalid length for a DHCP option, try and continue anyway.
When MTU is less than 576 we now ignore it instead of setting the MTU to 576.
Build correctly on dietlibc, thanks to d00mer.
Check that if_nametoindex returns a valid index, thanks to d00mer.

dhcpcd-3.0.16